force-app/main/default/objects/WorkItem__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <label>Build</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>