force-app/main/default/objects/WorkItem__c/fields/CE_User_Story_ID__c.field-meta.xml
<CustomField>
    <fullName>CE_User_Story_ID__c</fullName>
    <label>CE User Story ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>