force-app/main/default/objects/WorkItem__c/fields/Deploy__c.field-meta.xml
<CustomField>
    <fullName>Deploy__c</fullName>
    <label>Deploy</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>