force-app/main/default/objects/WorkItem__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>Design</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>