force-app/main/default/objects/WorkItem__c/fields/DesignOptions__c.field-meta.xml
<CustomField>
    <fullName>DesignOptions__c</fullName>
    <label>Design Options</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>