force-app/main/default/objects/WorkItem__c/fields/DetectedEnvironment__c.field-meta.xml
<CustomField>
    <fullName>DetectedEnvironment__c</fullName>
    <label>Detected Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
                <default>true</default>
                <label>UAT</label>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>