force-app/main/default/objects/WorkItem__c/fields/DetectionDate__c.field-meta.xml
<CustomField>
    <fullName>DetectionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Detection Date</label>
    <type>Date</type>
</CustomField>