force-app/main/default/objects/WorkItem__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>