force-app/main/default/objects/WorkItem__c/fields/Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Guidelines__c</fullName>
    <formula>&quot;👉 Steps To Reproduce (How to generate the issue) &quot; + BR()
+ &quot;👉 Expected Results (What is the exepcted output) &quot; + BR()
+ &quot;👉 Actual Results (What is the actual output, with detailed error message if any) &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidelines</label>
    <type>Text</type>
</CustomField>