force-app/main/default/objects/WorkItem__c/fields/ImplementationType__c.field-meta.xml
<CustomField>
    <fullName>ImplementationType__c</fullName>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Object Configuration</fullName>
            </value>
            <value>
                <fullName>Workflow &amp; Approval</fullName>
            </value>
            <value>
                <fullName>Custom Development</fullName>
            </value>
            <value>
                <fullName>Custom Page</fullName>
            </value>
            <value>
                <fullName>Profile &amp; Permission Set</fullName>
            </value>
            <value>
                <fullName>Interface (Inbound)</fullName>
            </value>
            <value>
                <fullName>Interface (Outbound)</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Migration (Manual)</fullName>
            </value>
            <value>
                <fullName>Data Migration (Automated)</fullName>
            </value>
            <value>
                <fullName>Appexchange Integration</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>