force-app/main/default/objects/WorkItem__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>