force-app/main/default/objects/WorkItem__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>