force-app/main/default/objects/WorkItem__c/fields/PrerequisitetUS__c.field-meta.xml
<CustomField>
    <fullName>PrerequisitetUS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prerequisite</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>WorkItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Story</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Dependent US</relationshipLabel>
    <relationshipName>DependentUS</relationshipName>
    <type>Lookup</type>
</CustomField>