force-app/main/default/objects/WorkItem__c/fields/RaisedBy__c.field-meta.xml
<CustomField>
    <fullName>RaisedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>