force-app/main/default/objects/WorkItem__c/fields/Related_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User Story</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Work Items (Related User Story)</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>