force-app/main/default/objects/WorkItem__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>