force-app/main/default/objects/WorkItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending with Business</fullName>
            </value>
            <value>
                <fullName>Business Approved</fullName>
            </value>
            <value>
                <fullName>Design In Progress</fullName>
            </value>
            <value>
                <fullName>Design Complete</fullName>
            </value>
            <value>
                <fullName>Build In Progress</fullName>
            </value>
            <value>
                <fullName>Ready For Build Review</fullName>
            </value>
            <value>
                <fullName>Build Complete</fullName>
            </value>
            <value>
                <fullName>Ready For SIT</fullName>
            </value>
            <value>
                <fullName>SIT Complete</fullName>
            </value>
            <value>
                <fullName>Ready For UAT</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>UAT Complete</fullName>
            </value>
            <value>
                <fullName>Pushed To Production</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>✅ Closed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>🔄 In Progress</label>
            </value>
            <value>
                <fullName>Ready For Test</fullName>
                <isActive>false</isActive>
                <label>🟨 Ready For Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>