force-app/main/default/objects/WorkItem__c/fields/TestingOrg__c.field-meta.xml
<CustomField>
    <fullName>TestingOrg__c</fullName>
    <label>Testing Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
                <default>true</default>
                <label>DEV</label>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>