force-app/main/default/objects/WorkItem__c/fields/Topic_CE__c.field-meta.xml
<CustomField>
    <fullName>Topic_CE__c</fullName>
    <label>Topic</label>
    <length>150</length>
    <type>Text</type>
</CustomField>