force-app/main/default/objects/WorkItem__c/fields/TotalWorkloadDays__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkloadDays__c</fullName>
    <label>Total Workload (Days)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>