force-app/main/default/objects/WorkItem__c/fields/Validate__c.field-meta.xml
<CustomField>
    <fullName>Validate__c</fullName>
    <label>Validate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>