force-app/main/default/objects/WorkItem__c/fields/WorkItemId__c.field-meta.xml
<CustomField>
    <fullName>WorkItemId__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&quot;Defect&quot;, &quot;DEF-&quot; + Number__c, 
&quot;UserStory&quot;, &quot;US-&quot; + Number__c,
&quot;Improvement&quot;, &quot;IMP-&quot;+Number__c,
&quot;WI-&quot;+Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Id</label>
    <type>Text</type>
</CustomField>