force-app/main/default/objects/WorkItem__c/recordTypes/Improvement.recordType-meta.xml
<RecordType>
    <fullName>Improvement</fullName>
    <active>true</active>
    <description>Change in the actual design of the solution.</description>
    <label>Improvement</label>
</RecordType>