force-app/main/default/objects/WorkItem__c/recordTypes/UserStory.recordType-meta.xml
<RecordType>
    <fullName>UserStory</fullName>
    <active>true</active>
    <description>Represents a Business Need formalized with « As a ... I want to ... so that ... ».</description>
    <label>User Story</label>
</RecordType>