force-app/main/default/objects/WorkItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WorkItemId__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Capability__c</columns>
    <columns>ImpactedUS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/26/2023 12:00 AM</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>