force-app/main/default/objects/WorkItem__c/listViews/Defects.listView-meta.xml
<ListView>
    <fullName>Defects</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.Defect</value>
    </filters>
    <label>Defects</label>
</ListView>