force-app/main/default/objects/WorkItem__c/listViews/FTTH_US.listView-meta.xml
<ListView>
    <fullName>FTTH_US</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>CE_User_Story_ID__c</columns>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CE_User_Story_ID__c</field>
        <operation>contains</operation>
        <value>ST</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FTTH</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SDU</value>
    </filters>
    <label>FTTH - US</label>
</ListView>