force-app/main/default/objects/WorkItem__c/listViews/Improvements.listView-meta.xml
<ListView>
    <fullName>Improvements</fullName>
    <columns>WorkItemId__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.Improvement</value>
    </filters>
    <label>Improvements</label>
</ListView>