force-app/main/default/objects/WorkItem__c/listViews/Improvements_Ticketing.listView-meta.xml
<ListView>
    <fullName>Improvements_Ticketing</fullName>
    <columns>WorkItemId__c</columns>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.Improvement</value>
    </filters>
    <filters>
        <field>Capability__c</field>
        <operation>contains</operation>
        <value>Case</value>
    </filters>
    <label>Improvements - Ticketing</label>
</ListView>