force-app/main/default/objects/WorkItem__c/listViews/Service_Cloud_US_Not_in_Production.listView-meta.xml
<ListView>
    <fullName>Service_Cloud_US_Not_in_Production</fullName>
    <booleanFilter>(1 OR 2) and 3</booleanFilter>
    <columns>WorkItemId__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Capability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/26/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Capability__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>TargetRelease__c</field>
        <operation>equals</operation>
        <value>Ticketing_1.0.0</value>
    </filters>
    <label>Ticketing_1.0.0 : US/Defects/Improvement</label>
</ListView>