force-app/main/default/objects/WorkItem__c/listViews/Sitetracker_US.listView-meta.xml
<ListView>
    <fullName>Sitetracker_US</fullName>
    <columns>WorkItemId__c</columns>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>Capability__c</columns>
    <columns>Topic_CE__c</columns>
    <columns>TargetRelease__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CE_User_Story_ID__c</field>
        <operation>contains</operation>
        <value>ST</value>
    </filters>
    <filters>
        <field>TargetRelease__c</field>
        <operation>notContain</operation>
        <value>Ticketing</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Sitetracker US</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>