force-app/main/default/objects/WorkItem__c/listViews/Ticketing_User_Stories.listView-meta.xml
<ListView>
    <fullName>Ticketing_User_Stories</fullName>
    <columns>WorkItemId__c</columns>
    <columns>Capability__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.UserStory</value>
    </filters>
    <filters>
        <field>TargetRelease__c</field>
        <operation>equals</operation>
        <value>Ticketing_1.0.0</value>
    </filters>
    <label>Ticketing - User Stories</label>
</ListView>